# library_app

./: .env.sample  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: priject_ci.yml
library_app/: celery.py  mixins.py  settings.py  urls.py  views.py
library_app/books/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
library_app/books/migrations/: 0001_initial.py  0002_rename_timestamp_book_created_at.py  0003_book_url.py
library_app/fixtures/: books.json  test_data.json  users.json
library_app/templates/: index.html
library_app/templates/books/: book_page.html  books.html
library_app/templates/layouts/: base.html  delete.html  form.html
library_app/templates/users/: user_page.html  users.html
library_app/users/: apps.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
library_app/users/migrations/: 0001_initial.py
